CHANGES IN VERSION 1.20.0
-------------------------

NEW FEATURES

    o Add 'assayNames', 'assayNames<-' for SummarizedExperiment
    o Deprecate 'rowData', 'rowData<-' for SummarizedExperiment
    o Add 'rowRanges', 'rowRanges<-' for SummarizedExperiment

CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o Add 'use.mcols' arg to "ranges" method for GRangesList objects. 

    o "assays<-" methods may be invoked with 'withDimnames' arg.

    o Add mapCoords() generic and methods (replacing map()).

    o Add granges,GenomicRanges method. 

    o Add strand<-,GRangesList,character method for global replacement
      (i.e., all strands become 'value'). 

    o Add resize,GRangesList-method.

    o Add DelegatingGenomicRanges class and vignette on how to extend
      GenomicRanges.

    o Document subsetting a named list-like object by a GRanges subscript.

SIGNIFICANT USER-LEVEL CHANGES

    o Modify "show" methods for GRanges and GRangesList objects so
      they print a 1-line summary of the seqinfo component.
      
    o Remove as.data.frame,GRangesList-method; use as.data.frame,List.

    o "trim" method for GenomicRanges only trims out-of-bound
      ranges on non-circular sequences whose length is not NA.
      This behavior is consistent with the GenomicRanges validity method.

    o Changes to flank(), resize() and start/end/width setters:
      - no longer trim the result ranges when called on a GRanges
      - warning is issued by GenomicRanges validity method when
        out-of-bound ranges are on non-circular sequences whose
        length is not NA
      Note this behavior is now consistent with that of shift().

    o Speed up validation of GenomicRanges objects by 1.2x. 

    o Speed up trim() on GenomicRanges objects by 1.2x. 

    o Improve warning when GenomicRanges object contains out-of-bound ranges. 

    o Work on vignette HOWTOs:
      - split 'How to read BAM files into R' into 3 HOWTOs